--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-note",
   "version": "0.1.0",
-  "homepage": "https://sakirsyarian.github.io/personal-notes",
+  "homepage": "https://github.com/andiwidjaya/app-catatan-react",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
